--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "bulma": "^0.7.2",
-    "vue": "^2.5.21"
+    "vue": "^2.5.21",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.3.0",
